[package]
name = "amtk"
version = "0.1.0"
authors = ["Erin Moon <erin@hecke.rs>"]
edition = "2018"

exclude = ["test_data/**/*"] # keep amtrak copyrighted stuff out of crates.io

[dependencies]
aes = "0.7"
block-modes = "0.8"
pbkdf2 = "0.8"
base64 = "0.13"
hmac = "0.11"
sha-1 = "0.9" # caveat: `sha-1` is RustCrypto, `sha1` is mitsuhiko/rust-sha1
